using System;

public class Budget
{
    
}