using System;

public class CategoryManager
{
    
}