using System;

public class ReportGenerator
{
   
}